--- a/chatgpt_web/public/index.html
+++ b/chatgpt_web/public/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=1200, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<style>
+  /* 设置body元素的宽度为设备宽度的95%并使其居中 */
+  body {
+    width: 95%;
+    margin: 0 auto; /* 居中 */
+  }
+</style>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
