--- a/chatgpt_web/public/index.html
+++ b/chatgpt_web/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width * 0.95, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <style>
-  /* 设置body元素的宽度为设备宽度的95%并使其居中 */
+  /* 将body元素的宽度设置为视口宽度的95%并居中 */
   body {
     width: 95%;
     margin: 0 auto; /* 居中 */
